# fyp

./: .gitignore  CMakeLists.txt  do
circs/: 2bitadder.truth  2bitadder_start.circ  2bitadder_starter.circ  2bitmul.circ  2bitmul.truth  2bitmulstarter.circ  3bitmul.circ  3bitmul.truth  3bitmulstarter.circ  4bitadder.circ  4bitadder_2.circ  4bitadder_starter.circ  4bitmul.circ  4bitmulexact.circ  4bitmulstarter.circ  fas2.circ  full_adder.circ  full_adder_starter.circ  fulladder.truth  maj9.circ  sym9.circ  test.circ
figures/: Allowable_Gate_Types_=_{AND,OR,XOR,NAND,NOR,XNOR}full2  Allowable_Gate_Types_=_{AND,OR,XOR,NAND,NOR,XNOR}full3  Allowable_Gate_Types_=_{AND,OR,XOR},_4bit_Multiplierfull3  Allowable_Gate_Types_=_{AND,OR,XOR}full  Cartesian_plane_size_vs_correctness_progress:_4bit_multiplier2full  Comparison_of_offspring_generation_methods,_4bit_adder_(gates)full  Comparison_of_offspring_generation_methods,_4bit_adderfull  Comparison_of_offspring_generation_methods_(gates)full  Comparison_of_offspring_generation_methodsfull  Correctness_progress:_2bit_multiplierfull  Correctness_progress_across_mutation_percentage:_4bit_multiplierfull  Correctnessfsdsdf_no_brid1half  Correctnessfsdsdf_with_brid1half  Effect_breeding_sample_size_on_final_avg_correctness_for_3bit_multiplier  Effect_of_cartesian_plane_row_count_on_correctness_progress_for_4bit_multiplier  Effect_of_cartesian_plane_size_on_final_correctness  Effect_of_cartesian_plane_size_on_final_correctness_for_4bit_multiplier  Effect_of_cartesian_plane_size_on_final_gate_count  Multi_breeding:_4bit_adderfull  (+29 more)
(+161 files in other folders)
